TUC-45 Getting rid of uppercases.

--- a/model/.runtime/projectInfo.html
+++ b/model/.runtime/projectInfo.html
@@ -37,7 +37,7 @@
 			</tr>
 			<tr>
 				<td><label>Last modification:</label></td>
-				<td><span>06-23-2017 12:30:06</span></td>
+				<td><span>06-23-2017 15:32:57</span></td>
 			</tr>
       <tr>
 				<td><label>Version:</label></td>
@@ -45,7 +45,7 @@
 			</tr>
 			<tr>
 				<td><label>Path:</label></td>
-				<td><input class="readonlyInput" type="text" value="C:\Projects\Tucuxi\Model" readonly="readonly"></input></td>
+				<td><input class="readonlyInput" type="text" value="C:\Projects\Tucuxi\model" readonly="readonly"></input></td>
 			</tr>
 			<tr>
 				<td><label>Remote location:</label></td>
