TUC-70 Fixed minor bugs in web pages.

--- a/src/tucuserver/license.html
+++ b/src/tucuserver/license.html
@@ -73,7 +73,7 @@
 
 			<div class="form-group">
 				<label for="emailId">Email address</label>
-				<input type="email" class="form-control" id="emailId" aria-describedby="emailHelp" placeholder="Enter your email address">
+				<input type="email" id="emailId" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter your email address">
 				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
 			</div>
 
